--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -10,10 +10,10 @@
     </ng-container>
     <ng-container *ngIf="!showAdminNav">
       <a routerLink="/my-cases" [queryParams]="navQueryParams" class="navLink" routerLinkActive="navLinkActive" [routerLinkActiveOptions]="{ exact: true }">My cases</a>
-      <span class="sep">|</span>
-      <a [routerLink]="['/affidavit']" [queryParams]="navQueryParams" class="navLink" routerLinkActive="navLinkActive">Affidavit</a>
-      <span class="sep">|</span>
-      <a [routerLink]="['/affidavit/edit']" [queryParams]="navQueryParams" class="navLink" routerLinkActive="navLinkActive">Edit data</a>
+      <span class="sep" *ngIf="!isRespondentViewer">|</span>
+      <a *ngIf="!isRespondentViewer" [routerLink]="['/affidavit']" [queryParams]="navQueryParams" class="navLink" routerLinkActive="navLinkActive">Affidavit</a>
+      <span class="sep" *ngIf="!isRespondentViewer">|</span>
+      <a *ngIf="!isRespondentViewer" [routerLink]="['/affidavit/edit']" [queryParams]="navQueryParams" class="navLink" routerLinkActive="navLinkActive">Edit data</a>
       <span class="sep">|</span>
       <a [routerLink]="['/profile']" [queryParams]="navQueryParams" class="navLink" routerLinkActive="navLinkActive">Profile</a>
     </ng-container>
